--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
     <table border="0" cellspacing="0" cellpadding="0" class="em-mob-width-100perc">
       <tr>
         <td width="580" valign="top" class="em-mob-wrap em-mob-width-100perc"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-bottom: 5px; padding-left: 0px;">
-  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 24px; line-height: 32px; color: #000000;" class="em-font-Montserrat-Bold"><strong>2. Амбассадоры июля</strong></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; font-size: 24px; line-height: 32px; color: #000000;" class="em-font-Montserrat-Bold"><strong>2. Амбассадоры августа</strong></div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="100%">
                                             <tr>
                                                 <td align="left">
@@ -528,7 +528,7 @@
 <br></div>
                                                 </td>
                                             </tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td height="0" style="padding: 10px 0px 0px; border-top: 2px solid #a3adbb;">&nbsp;</td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-bottom: 15px; padding-left: 0px;" align="left">
-  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 32px; color: #000000; font-size: 20px;" class="em-font-Montserrat-Bold" align="left"><strong style="font-size: 22px;">ТОП-20 сотрудников июля:</strong></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 32px; color: #000000; font-size: 20px;" class="em-font-Montserrat-Bold" align="left"><strong style="font-size: 22px;">ТОП-20 сотрудников августа:</strong></div>
 </td></tr></table>
 <table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="100%">
                                             <tr>
@@ -545,25 +545,25 @@
         <td width="130" valign="top" class="em-mob-wrap em-mob-wrap-cancel em-mob-width-auto"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-left: 0px;" align="center" class="em-mob-padding_top-1">
   <div style="font-family: Helvetica, Arial, sans-serif; line-height: 22px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px" align="center"><strong style="font-size: 18px;"></strong>Юлия Свешникова <br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding: 5px 0px;" align="center">
-  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>1 206⚡<br><strong style="font-size: 18px;"></strong></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>1&nbsp;206⚡<br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table></td>
         <td width="20" class="em-mob-wrap em-mob-wrap-cancel em-mob-height-20px"></td>
         <td width="130" valign="top" class="em-mob-wrap em-mob-wrap-cancel em-mob-width-auto"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-left: 0px;" align="center" class="em-mob-padding_top-1">
   <div style="font-family: Helvetica, Arial, sans-serif; line-height: 22px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px" align="center"><strong style="font-size: 18px;"></strong>Артем Икрин<br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding: 5px 0px;" align="center">
-  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>1 195⚡<br><strong style="font-size: 18px;"></strong></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>1&nbsp;195⚡<br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table></td>
         <td width="20" class="em-mob-wrap em-mob-wrap-cancel em-mob-height-20px"></td>
         <td width="130" valign="top" class="em-mob-wrap em-mob-wrap-cancel em-mob-width-auto"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-left: 0px;" align="center" class="em-mob-padding_top-1">
   <div style="font-family: Helvetica, Arial, sans-serif; line-height: 22px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px" align="center"><strong style="font-size: 18px;"></strong>Александр Филиппов<br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding: 5px 0px;" align="center">
-  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>1 181⚡<br><strong style="font-size: 18px;"></strong></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>1&nbsp;181⚡<br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table></td>
         <td width="20" class="em-mob-wrap em-mob-wrap-cancel em-mob-height-20px"></td>
         <td width="130" valign="top" class="em-mob-wrap em-mob-wrap-cancel em-mob-width-auto"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-left: 0px;" align="center">
   <div style="font-family: Helvetica, Arial, sans-serif; line-height: 22px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px" align="center"><strong style="font-size: 18px;"></strong>Елена Калачикова<br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding: 5px 0px;" align="center">
-  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>&nbsp;1 145⚡<br><strong style="font-size: 18px;"></strong></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>&nbsp;1&nbsp;145⚡<br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table></td>
       </tr></table>
   </td>
@@ -574,25 +574,25 @@
         <td width="130" valign="top" class="em-mob-wrap em-mob-wrap-cancel em-mob-width-auto"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-left: 0px;" align="center" class="em-mob-padding_top-1">
   <div style="font-family: Helvetica, Arial, sans-serif; line-height: 22px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px" align="center"><strong style="font-size: 18px;"></strong>Анна Антонова<br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding: 5px 0px;" align="center">
-  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>1 118⚡<br><strong style="font-size: 18px;"></strong></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>1&nbsp;118⚡<br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table></td>
         <td width="20" class="em-mob-wrap em-mob-wrap-cancel em-mob-height-20px"></td>
         <td width="130" valign="top" class="em-mob-wrap em-mob-wrap-cancel em-mob-width-auto"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-left: 0px;" align="center" class="em-mob-padding_top-1 em-mob-padding_left-2">
   <div style="font-family: Helvetica, Arial, sans-serif; line-height: 22px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px" align="center"><strong style="font-size: 18px;"></strong>Александр Бородин<br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding: 5px 0px;" align="center">
-  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>1 106⚡<br><strong style="font-size: 18px;"></strong></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>1&nbsp;106⚡<br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table></td>
         <td width="20" class="em-mob-wrap em-mob-wrap-cancel em-mob-height-20px"></td>
         <td width="130" valign="top" class="em-mob-wrap em-mob-wrap-cancel em-mob-width-auto"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-left: 0px;" align="center" class="em-mob-padding_top-1">
   <div style="font-family: Helvetica, Arial, sans-serif; line-height: 22px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px" align="center"><strong style="font-size: 18px;"></strong>Елена Максимчик<br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding: 5px 0px;" align="center">
-  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>1 094⚡<br><strong style="font-size: 18px;"></strong></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>1&nbsp;094⚡<br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table></td>
         <td width="20" class="em-mob-wrap em-mob-wrap-cancel em-mob-height-20px"></td>
         <td width="130" valign="top" class="em-mob-wrap em-mob-wrap-cancel em-mob-width-auto"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-left: 0px;" align="center">
   <div style="font-family: Helvetica, Arial, sans-serif; line-height: 22px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px" align="center"><strong style="font-size: 18px;"></strong>Цуркан Наталья<br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding: 5px 0px;" align="center">
-  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>1 089⚡<br><strong style="font-size: 18px;"></strong></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>1&nbsp;089⚡<br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table></td>
       </tr></table>
   </td>
@@ -603,13 +603,13 @@
         <td width="130" valign="top" class="em-mob-wrap em-mob-wrap-cancel em-mob-width-auto"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-left: 0px;" align="center" class="em-mob-padding_top-1">
   <div style="font-family: Helvetica, Arial, sans-serif; line-height: 22px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px" align="center"><strong style="font-size: 18px;"></strong>Валентина Захарчук<br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding: 5px 0px;" align="center">
-  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>1 065⚡<br><strong style="font-size: 18px;"></strong></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>1&nbsp;065⚡<br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table></td>
         <td width="20" class="em-mob-wrap em-mob-wrap-cancel em-mob-height-20px"></td>
         <td width="130" valign="top" class="em-mob-wrap em-mob-wrap-cancel em-mob-width-auto"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-left: 0px;" align="center" class="em-mob-padding_top-1">
   <div style="font-family: Helvetica, Arial, sans-serif; line-height: 22px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px" align="center"><strong style="font-size: 18px;"></strong>Александр Иванов<br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding: 5px 0px;" align="center">
-  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>1 010⚡<br><strong style="font-size: 18px;"></strong></div>
+  <div style="font-family: Helvetica, Arial, sans-serif; line-height: 24px; color: #000000; font-size: 18px;" class="em-font-Montserrat-Bold em-mob-font_size-16px em-mob-line_height-20px" align="center"><strong style="font-size: 18px;"></strong>1&nbsp;010⚡<br><strong style="font-size: 18px;"></strong></div>
 </td></tr></table></td>
         <td width="20" class="em-mob-wrap em-mob-wrap-cancel em-mob-height-20px"></td>
         <td width="130" valign="top" class="em-mob-wrap em-mob-wrap-cancel em-mob-width-auto"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-right: 0px; padding-left: 0px;" align="center" class="em-mob-padding_top-1">
