--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <td width="580" valign="top" class="em-mob-wrap em-mob-width-100perc"><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td height="0" style="padding-right: 0px; padding-bottom: 0px; padding-left: 0px; border-top: 2px solid #a3adbb;">&nbsp;</td></tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="100%">
                                             <tr>
                                                 <td align="left" style="padding-bottom: 15px; padding-top: 10px;">
-                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 18px; line-height: 22px; color: #000000;" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><span style="font-weight: bold;">Собранные средства позволили провести продолжить по&nbsp;благоустройству Лилового дома. </span><span style="font-style: italic;"><strong></strong></span></div>
+                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 18px; line-height: 22px; color: #000000;" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><span style="font-weight: bold;">Собранные средства позволили продолжить работы по&nbsp;благоустройству Лилового дома. </span><span style="font-style: italic;"><strong></strong></span></div>
                                                 </td>
                                             </tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td>
   <img src="https://img.hiteml.com/en/v5/user-files?userId=5840129&resource=himg&disposition=inline&name=6n95c3eu16spjp7j5ajpnfkpkz3ne3m9zj7q6bdngrnh6yiif831jzhg4jyqekerug3xxgbqzbs36ynfkwei7eygpr9x6rniahh3rgowyk8ambk6aiw67m819gjzocxwjksssroyfzcd9ouzcfbg9wq59qo" width="580" border="0" alt="Фото с территории ВОРДИ" style="display: block; width: 100%; max-width: 580px;">
@@ -904,7 +904,7 @@ II. Планы на&nbsp;сентябрь
                                             </tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="100%">
                                             <tr>
                                                 <td align="left" style="padding-top: 15px; padding-right: 10px; padding-left: 10px; border-width: 0px 1px; border-left-color: #20286d; border-left-style: solid; border-right-color: #20286d; border-right-style: solid;">
-                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong></strong><span style="font-weight: bold;">Цель?</span>&nbsp;1 835 000&nbsp;руб. на&nbsp;благоустройство двух детских площадок и&nbsp;каркасный бассейн
+                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong></strong><span style="font-weight: bold;">Цель?</span>&nbsp;1 835 000&nbsp;руб. на&nbsp;благоустройство двух детских площадок и&nbsp;каркасный бассейн.
  <span style="font-weight: bold;">
 </span><strong></strong>
 <br></div>
@@ -970,8 +970,7 @@ II. Планы на&nbsp;сентябрь
                                                 <td align="left" style="padding: 15px 10px 10px; border-width: 0px 1px; border-left-color: #20286d; border-left-style: solid; border-right-color: #20286d; border-right-style: solid;">
                                                     <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong></strong><span style="font-weight: bold;">Кому помогаем?</span>
 Детскому дому в&nbsp;Николаевске-на-Амуре
-Школе-интернату для детей с&nbsp;ОВЗ в&nbsp;Петропавловске-Камчатском
-.<br></div>
+Школе-интернату для детей с&nbsp;ОВЗ в&nbsp;Петропавловске-Камчатском.<br></div>
                                                 </td>
                                             </tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="100%">
                                             <tr>
@@ -982,7 +981,7 @@ II. Планы на&nbsp;сентябрь
                                             </tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="100%">
                                             <tr>
                                                 <td align="left" style="padding-right: 10px; padding-bottom: 10px; padding-left: 10px; border-width: 0px 1px; border-left-color: #20286d; border-left-style: solid; border-right-color: #20286d; border-right-style: solid;">
-                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong></strong><span style="font-weight: bold;">Когда? </span> до&nbsp;конца сентября
+                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong></strong><span style="font-weight: bold;">Когда? </span> до&nbsp;конца сентября.
  <span style="font-weight: bold;">
 </span><strong></strong>
 <br></div>
