--- a/index.html
+++ b/index.html
@@ -270,8 +270,13 @@
 </td></tr></table>
 <table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="90%">
                                             <tr>
-                                                <td style="padding-top: 10px; padding-bottom: 10px;" align="center">
+                                                <td style="padding-top: 10px;" align="center">
                                                     <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong>Мы&nbsp;прошли 154&nbsp;683&nbsp;000&nbsp;шагов</strong><br></div>
+                                                </td>
+                                            </tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="90%">
+                                            <tr>
+                                                <td style="padding-bottom: 10px;" align="center">
+                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" class="em-mob-font_size-14px em-font-Montserrat-Regular">то&nbsp;есть преодолели ¾ расстояния от&nbsp;Земли до&nbsp;Луны<br></div>
                                                 </td>
                                             </tr></table></td>
         <td width="20" class="em-mob-wrap em-mob-height-20px"></td>
@@ -279,8 +284,13 @@
   <img src="https://img.hiteml.com/en/v5/user-files?userId=5840129&resource=himg&disposition=inline&name=6phuydp5h6mcfi7j5ajpnfkpkz3ne3m9zj7q6bdngrnh6yiif831jzhg4jyqekerus6eduqnmee6hwck4i41kubesxxadrnw1yubfjymj5f7wwb8iy3a9zep1xodnrzxzm3df5kgn8f7xjhne1os87ret9r" width="100" border="0" alt="велосипед" style="display: block; width: 100%; max-width: 100px;">
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="90%">
                                             <tr>
-                                                <td style="padding-top: 10px; padding-bottom: 10px;" align="center">
+                                                <td style="padding-top: 10px;" align="center">
                                                     <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong>Мы&nbsp;проехали 7&nbsp;066&nbsp;км</strong><br></div>
+                                                </td>
+                                            </tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="90%">
+                                            <tr>
+                                                <td style="padding-bottom: 10px;" align="center">
+                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" class="em-mob-font_size-14px em-font-Montserrat-Regular">то&nbsp;есть добрались из&nbsp;Благовещенска до&nbsp;Казани<br></div>
                                                 </td>
                                             </tr></table></td>
       </tr></table>
@@ -295,8 +305,13 @@
 </td></tr></table>
 <table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="90%">
                                             <tr>
-                                                <td style="padding-top: 10px; padding-bottom: 10px;" align="center">
+                                                <td style="padding-top: 10px;" align="center">
                                                     <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong></strong><strong>Мы&nbsp;проплыли 337&nbsp;км</strong><br></div>
+                                                </td>
+                                            </tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="90%">
+                                            <tr>
+                                                <td style="padding-bottom: 10px;" align="center">
+                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" class="em-mob-font_size-14px em-font-Montserrat-Regular"> то есть пересекли Каспийское море<br></div>
                                                 </td>
                                             </tr></table></td>
         <td width="20" class="em-mob-wrap em-mob-height-20px"></td>
@@ -304,8 +319,13 @@
   <img src="https://img.hiteml.com/en/v5/user-files?userId=5840129&resource=himg&disposition=inline&name=6xn3w6c8hon1pm7j5ajpnfkpkz3ne3m9zj7q6bdngrnh6yiif831jzhg4jyqekerujz4cjkhfxz83npqwer837orqzgnmj1txdgqkfnuozsstz9oppushhxmfaipu7do3ujiwdsupck4bqies4hw73yh11c" width="100" border="0" alt="бег" style="display: block; width: 100%; max-width: 100px;">
 </td></tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="90%">
                                             <tr>
-                                                <td style="padding-top: 10px; padding-bottom: 10px;" align="center">
+                                                <td style="padding-top: 10px;" align="center">
                                                     <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" class="em-mob-font_size-14px em-font-Montserrat-Regular"><strong></strong><strong>Мы&nbsp;пробежали 5&nbsp;483&nbsp;км</strong><br></div>
+                                                </td>
+                                            </tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="90%">
+                                            <tr>
+                                                <td style="padding-bottom: 10px;" align="center">
+                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 23px;" class="em-mob-font_size-14px em-font-Montserrat-Regular"> то есть достигли Тольятти, стартовав в Чите<br></div>
                                                 </td>
                                             </tr></table></td>
       </tr></table>
@@ -835,18 +855,6 @@ II. Планы на&nbsp;сентябрь
       <td width="10">&nbsp;</td>
       <td align="left" valign="top">
         <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px; color: #333333" class="em-font-Montserrat-Regular"><strong></strong><strong></strong><strong></strong>Расскажем вам о&nbsp;необычных способностях детей с&nbsp;особенностями.
-</div>
-      </td>
-    </tr></table>
-</td></tr></table><table cellpadding="0" cellspacing="0" border="0" width="100%" em="atom"><tr><td style="padding-bottom: 5px; padding-left: 20px; border-width: 0px 1px; border-left-color: #20286d; border-right-color: #20286d; border-right-style: solid; border-left-style: solid;">
-  <table cellpadding="0" cellspacing="0" border="0" width="100%">
-    <tr>
-      <td align="left" valign="top" width="10">
-      <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px; color: #333333;" class="em-font-Montserrat-Regular">•</div>
-      </td>
-      <td width="10">&nbsp;</td>
-      <td align="left" valign="top">
-        <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px; color: #333333" class="em-font-Montserrat-Regular">Отметим 5&nbsp;сентября<span style="font-weight: bold;">: </span>Международный день благотворительности.
 </div>
       </td>
     </tr></table>
