--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
                                             </tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="100%">
                                             <tr>
                                                 <td align="left" style="padding-bottom: 10px;">
-                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px; color: #000000" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular">Мастер-класс, изначально запланированный для 40&nbsp;подопечных ВОРДИ, превратился в&nbsp;настоящий праздник для всех детей лагеря.
-<span style="font-style: italic;"><strong></strong></span></div>
+                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px; color: #000000" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular">День творчества стал настоящим праздником для 360 участников смены.<span style="font-style: italic;"><strong></strong></span></div>
                                                 </td>
                                             </tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="100%">
                                             <tr>
@@ -233,7 +232,7 @@
                                             </tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="100%">
                                             <tr>
                                                 <td align="left" style="padding-bottom: 10px;">
-                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px; color: #000000" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><span style="font-weight: bold;">Мы&nbsp;выражаем благодарность нашим сотрудникам из&nbsp;Култумы, ЗабайкалЗолотоПроекта, Талатуйя и&nbsp;ВостокГеоСервиса</span> за&nbsp;активную их&nbsp;неравнодушие, активную жизненную позицию и&nbsp;готовность помогать тем, кто в&nbsp;этом нуждается!
+                                                    <div style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 21px; color: #000000" align="left" class="em-mob-font_size-14px em-font-Montserrat-Regular"><span style="font-weight: bold;">Мы&nbsp;выражаем благодарность нашим сотрудникам из&nbsp;Култумы, Забайкал Золото Проекта, Талатуйя и&nbsp;Восток ГеоСервис Партнера</span> за&nbsp;активную их&nbsp;неравнодушие, активную жизненную позицию и&nbsp;готовность помогать тем, кто в&nbsp;этом нуждается!
 <span style="font-style: italic;"><strong></strong></span></div>
                                                 </td>
                                             </tr></table><table cellpadding="0" cellspacing="0" border="0" em="atom" class="em-mob-width-100perc" width="100%">
